Update image files

--- a/PyTen_Data_Extraction.ipynb
+++ b/PyTen_Data_Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "1a9d9422",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "8e5afe24",
    "metadata": {},
    "outputs": [
@@ -115,8 +115,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. of issues in Pytorch (With pull requests): 83800\n",
-      "No. of issues in Tensorflow (With pull requests): 57000\n"
+      "No. of issues in Pytorch (With pull requests): 83769\n",
+      "No. of issues in Tensorflow (With pull requests): 56989\n"
      ]
     }
    ],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "a7814c1c",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "9031cda7",
    "metadata": {},
    "outputs": [
@@ -169,8 +169,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. of issues in Pytorch (Without pull requests): 21191\n",
-      "No. of issues in Tensorflow (Without pull requests): 34646\n"
+      "No. of issues in Pytorch (Without pull requests): 21175\n",
+      "No. of issues in Tensorflow (Without pull requests): 34629\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "bea55b0b",
    "metadata": {},
    "outputs": [
@@ -192,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. of issues in Pytorch closed with the last two years: 8288\n",
-      "No. of issues in Tensorflow closed with the last two years: 8240\n"
+      "No. of issues in Pytorch closed within the last two years: 8272\n",
+      "No. of issues in Tensorflow closed within the last two years: 8223\n"
      ]
     }
    ],
@@ -201,13 +201,13 @@
     "# filter issues by closed date [2021-02-15]\n",
     "pytorch_df = pytorch_df.loc[pytorch_df[\"closed_at\"] >= CHECK_DATE]\n",
     "tensorflow_df = tensorflow_df.loc[tensorflow_df[\"closed_at\"] >= CHECK_DATE]\n",
-    "print(\"No. of issues in Pytorch closed with the last two years:\", len(pytorch_df))\n",
-    "print(\"No. of issues in Tensorflow closed with the last two years:\", len(tensorflow_df))"
+    "print(\"No. of issues in Pytorch closed within the last two years:\", len(pytorch_df))\n",
+    "print(\"No. of issues in Tensorflow closed within the last two years:\", len(tensorflow_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "0b147d4a",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "9b8aad1b",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "16e3eab3",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "2982  161807205        12  CONTRIBUTOR"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "54f46dea",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "875  211165936         9  CONTRIBUTOR"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "196f7fb1",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "82fc9a08",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "9055853d",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "7af39eef",
    "metadata": {},
    "outputs": [],
