--- a/PyTen_Data_Analysis.ipynb
+++ b/PyTen_Data_Analysis.ipynb
@@ -793,6 +793,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6e17eb9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average value for MTTF for high label pytorch:  1423.6\n",
+      "Average value for MTTF for low label pytorch:  1235.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "high_label = pytorch_metrics_df.loc[pytorch_metrics_df[\"Labels\"]==\"high priority\"]\n",
+    "low_label = pytorch_metrics_df.loc[pytorch_metrics_df[\"Labels\"]==\"module: bootcamp\"]\n",
+    "\n",
+    "\n",
+    "print(\"Average value for MTTF for high label pytorch: \",high_label[\"MTTF\"].mean())\n",
+    "print(\"Average value for MTTF for low label pytorch: \",low_label[\"MTTF\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ca5287b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average value for MTTF for high label tensorflow:  1928.2857142857142\n",
+      "Average value for MTTF for low label tensorflow:  1681.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "high_label = tensorflow_metrics_df.loc[tensorflow_metrics_df[\"Labels\"]==\"stat:awaiting response\"]\n",
+    "low_label = tensorflow_metrics_df.loc[tensorflow_metrics_df[\"Labels\"]==\"type:bug\"]\n",
+    "\n",
+    "\n",
+    "print(\"Average value for MTTF for high label tensorflow: \",high_label[\"MTTF\"].mean())\n",
+    "print(\"Average value for MTTF for low label tensorflow: \",low_label[\"MTTF\"].mean())"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "952006da",
